# mdpy

./: LICENSE  README.md  dockerfile  markdown.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/mdpy/: mdpy.py
tests/: test_conversion.py
